tests/typing/fail/tuple_arg_nested_star_fail1.rb

def f() yield [1,2] end
f {|(x,*y)| y + 2}
